# svelte-rust-grpc

./: Cargo.toml  build.rs
proto/: rpc.proto
src/: main.rs  rpc.rs
src/web/: mod.rs
web/: .gitignore  package-lock.json  package.json  vite.config.js
web/src/lib/: rpc.ts
web/src/routes/: +page.svelte
